syntax = "proto3";
package faucet;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "faucet/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/bluzelle/bluzelle-public/curium/x/faucet/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/bluzelle/curium/faucet/params";
  }
  // Queries a list of Mint items.
	rpc Mint(QueryMintRequest) returns (QueryMintResponse) {
		option (google.api.http).get = "/bluzelle/curium/faucet/mint/{address}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryMintRequest {
  string address = 1;
}

message QueryMintResponse {
  string address = 1;
  string mnemonic = 2;
}

// this line is used by starport scaffolding # 3
