syntax = "proto3";
package bluzelle.curium.faucet;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bluzelle/bluzelle-public/curium/x/faucet/types";

// Msg defines the Msg service.
service Msg {
      rpc Mint(MsgMint) returns (MsgMintResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgMint {
  string creator = 1;
  string address = 2;
}

message MsgMintResponse {
  string address = 1;
}

// this line is used by starport scaffolding # proto/tx/message